--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jon Hahn Digital Scales</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -134,7 +135,9 @@
     </nav>
 
     <h2 class="text">
-    Interested? Message @hahnjon
+    Interested? Contact me: <a href="https://www.instagram.com/hahnjon" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-instagram"></i></a><a href="https://www.instagram.com/hahnjon" target="_blank" rel="noopener noreferrer">hahnjon</a>
+
     </h2>
 
     <p class = "text">
