--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            width: 100%;
         }
         .container {
             width: 80%;
