--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         .text {
             width: 60%;
             margin: auto;
-            padding: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
             font-family: 'Merriweather', serif;
             text-align: center;
         }
