--- a/index.html
+++ b/index.html
@@ -14,22 +14,28 @@
             background-color: #f4f4f4;
             width: 100%;
         }
+
+        header {
+            background: url('banner.webp') no-repeat center center;
+            background-size: cover;
+            background-position: center 60%; /* Adjust the vertical position */
+            color: #f4f4f4;
+            padding-top: 100px;
+            padding-bottom: 10px;
+            min-height: 90px;
+            border-bottom: #077187 1px solid;
+        }
         .container {
             width: 80%;
             margin: auto;
             overflow: hidden;
         }
-        header {
-            background: #50a3a2;
-            color: #ffffff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #077187 1px solid;
-        }
+
         header h1 {
             padding: 5px 0;
             text-align: center;
             font-size: 24px;
+            color: #bbbbbb;
         }
         nav {
             background: #35424a;
@@ -120,13 +126,22 @@
             padding: 10px;
             font-family: 'Merriweather', serif;
             text-align: center;
+            font-size: 18px;
+        }
+       .text2 {
+            width: 60%;
+            margin: auto;
+            padding: 10px;
+            font-family: 'Merriweather', serif;
+            text-align: center;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <h1>Hahn Digital Kitchen Scales</h1>
+            <h1>Jon's Kitchen Scales</h1>
         </div>
     </header>
 
@@ -142,10 +157,10 @@
 
     </h2>
 
-    <p class = "text">
-        Lumber sourced from Wood From The Hood in Minneapolis</br>
+    <p class = "text2">
+        Reclaimed urban lumber supplied by Wood From The Hood in Minneapolis</br>
         Rechargeable - USB-C </br>
-        Displays grams or oz up to 5kg or 11 lbs </br>
+        Displays grams or oz up to 5 kg / 11 lbs </br>
     </p>
 
 
@@ -178,7 +193,7 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#12 - Hackberry</h2>
-        <p>$50</p>
+        <p>SOLD</p>
     </div>
 
     <div class="product">
