--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         header h1 {
             padding: 5px 0;
             text-align: center;
-            font-size: 24px;
+            font-size: 22px;
             color: #bbbbbb;
         }
         nav {
@@ -121,7 +121,7 @@
         }
 
         .text {
-            width: 60%;
+            width: 90%;
             margin: auto;
             padding: 10px;
             font-family: 'Merriweather', serif;
@@ -129,7 +129,7 @@
             font-size: 18px;
         }
        .text2 {
-            width: 60%;
+            width: 90%;
             margin: auto;
             padding: 10px;
             font-family: 'Merriweather', serif;
@@ -158,9 +158,9 @@
     </h2>
 
     <p class = "text2">
-        Reclaimed urban lumber supplied by Wood From The Hood in Minneapolis</br>
-        Rechargeable - USB-C </br>
-        Displays grams or oz up to 5 kg / 11 lbs </br>
+        Reclaimed urban lumber supplied by Wood From The Hood in Minneapolis<br>
+        Rechargeable - USB-C <br>
+        Displays grams or oz up to 5 kg / 11 lbs <br>
     </p>
 
 
