--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
     <h2 class="text">
     Interested? Contact me: <a href="https://www.instagram.com/hahnjon" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-instagram"></i></a><a href="https://www.instagram.com/hahnjon" target="_blank" rel="noopener noreferrer">hahnjon</a>
-
     </h2>
 
     <p class = "text2">
@@ -214,6 +213,66 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#13 - American Elm</h2>
+        <p>$50</p>
+    </div>
+
+    <div class="product">
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="Photos-001/scale14-1.jpg" alt="Product 1 - Image 1">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale14-2.jpg" alt="Product 1 - Image 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale14-3.jpg" alt="Product 1 - Image 3">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale14-4.jpg" alt="Product 1 - Image 4">
+            </div>
+            <button class="carousel-prev">&#10094;</button>
+            <button class="carousel-next">&#10095;</button>
+        </div>
+        <h2>#14 - Hackberry</h2>
+        <p>$50</p>
+    </div>
+
+    <div class="product">
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="Photos-001/scale15-1.jpg" alt="Product 1 - Image 1">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale15-2.jpg" alt="Product 1 - Image 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale15-3.jpg" alt="Product 1 - Image 3">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale15-4.jpg" alt="Product 1 - Image 4">
+            </div>
+            <button class="carousel-prev">&#10094;</button>
+            <button class="carousel-next">&#10095;</button>
+        </div>
+        <h2>#15 - Hackberry</h2>
+        <p>SOLD</p>
+    </div>
+
+    <div class="product">
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="Photos-001/scale16-1.jpg" alt="Product 1 - Image 1">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale16-2.jpg" alt="Product 1 - Image 2">
+            </div>
+            <div class="carousel-slide">
+                <img src="Photos-001/scale16-3.jpg" alt="Product 1 - Image 3">
+            </div>
+            <button class="carousel-prev">&#10094;</button>
+            <button class="carousel-next">&#10095;</button>
+        </div>
+        <h2>#16 - American Elm</h2>
         <p>$50</p>
     </div>
 
