--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
     </h2>
 
     <p class = "text2">
+        * First sale limited to Twin Cities only
+    </p>
+
+
+    <p class = "text2">
         Reclaimed urban lumber supplied by Wood From The Hood in Minneapolis<br>
         Rechargeable - USB-C <br>
         Displays grams or oz up to 5 kg / 11 lbs <br>
