--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#14 - Hackberry</h2>
-        <p>$50</p>
+        <p>SOLD</p>
     </div>
 
     <div class="product">
