--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#13 - American Elm</h2>
-        <p>$50</p>
+        <p>SOLD</p>
     </div>
 
     <div class="product">
@@ -278,7 +278,7 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#16 - American Elm</h2>
-        <p>$50</p>
+        <p>SOLD</p>
     </div>
 
     </div>
