--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </h2>
 
     <p class = "text2">
-        * First sale limited to Twin Cities only
+        All scales have been claimed! If you would like to be in line for the next sale, please contact me.
     </p>
 
 
@@ -182,7 +182,7 @@
             <button class="carousel-next">&#10095;</button>
         </div>
         <h2>#11 - American Elm</h2>
-        <p>$50</p>
+        <p>SOLD</p>
     </div>    
         
     <div class="product">
